tests-integration/fixtures/checking/191_coercible_newtype_hidden/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
coerceHidden :: Int -> HiddenAge
coerceQualified :: Int -> HiddenAge

Types

Diagnostics
error[CoercibleConstructorNotInScope]: Constructor not in scope for Coercible
  --> 7:1..7:33
  |
7 | coerceHidden :: Int -> HiddenAge
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Coercible @Type Int HiddenAge
  --> 7:1..7:33
  |
7 | coerceHidden :: Int -> HiddenAge
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[CoercibleConstructorNotInScope]: Constructor not in scope for Coercible
  --> 10:1..10:38
   |
10 | coerceQualified :: Int -> L.HiddenAge
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Coercible @Type Int HiddenAge
  --> 10:1..10:38
   |
10 | coerceQualified :: Int -> L.HiddenAge
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
